// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cohere - Chat (Default) 1`] = `
{
  "chat_history": [
    {
      "message": "string",
      "role": "string",
    },
  ],
  "finish_reason": "string",
  "generation_id": "string",
  "meta": {
    "api_version": {
      "version": "string",
    },
    "billed_units": {
      "input_tokens": "number",
      "output_tokens": "number",
    },
    "tokens": {
      "input_tokens": "number",
      "output_tokens": "number",
    },
  },
  "response_id": "string",
  "text": "string",
}
`;

exports[`Cohere - Chat 1`] = `
{
  "chat_history": [
    {
      "message": "string",
      "role": "string",
    },
  ],
  "finish_reason": "string",
  "generation_id": "string",
  "meta": {
    "api_version": {
      "version": "string",
    },
    "billed_units": {
      "input_tokens": "number",
      "output_tokens": "number",
    },
    "tokens": {
      "input_tokens": "number",
      "output_tokens": "number",
    },
  },
  "response_id": "string",
  "text": "string",
}
`;

exports[`Cohere - Generate 1`] = `
{
  "generations": [
    {
      "finish_reason": "string",
      "id": "string",
      "likelihood": "number",
      "text": "string",
      "token_likelihoods": [
        {
          "likelihood": "number",
          "token": "string",
        },
      ],
    },
  ],
  "id": "string",
  "meta": {
    "api_version": {
      "version": "string",
    },
    "billed_units": {
      "input_tokens": "number",
      "output_tokens": "number",
    },
  },
  "prompt": "string",
}
`;
